cmake_minimum_required(VERSION 3.30)
project(bellevuecs310spring2025)

set(CMAKE_CXX_STANDARD 14)

add_executable(bellevuecs310spring2025
    ".idea/fileTemplates/internal/C Source File.c"
    "Module 1/Ch02Exercise12.cpp"
    "Module 1/Ch02Exercise13.cpp"
    "Module 2/Ch03Exercise07.cpp"
    "Module 2/Mod2Dis1JayFisher.cpp"
    "Module 2/Mod2Disscussion1.cpp"
    "Module 3/Ch04Exercise16.cpp"
    "Module 3/Mod3Discussion1.cpp"
    "Module 3/Mod3Discussion1Bonczynski.cpp"
    "Module 4/Ch05Exercise33.cpp"
    "Module 4/Mod4Discussion1.cpp"
    "Module 4/Mod4Discussion1Zimmer.cpp"
    "Module 5/Ch06Exercise14.cpp"
    "Module 5/Mod5Discussion1.cpp"
    "Module 5/Mod5Discussion1Eaton.cpp"
    "Module 6/Ch07Exercise04.cpp"
        "Module 6/Mod6Discussion1.cpp"
        "Module 6/Mod6Discussion1ReplyBarron.cpp"
        "Module 7/Ch08Exercise07.cpp"
        "Module 7/Mod7Discussion1.cpp"
        "Module 7/Mod7Discussion1Answer.cpp"
        "Module 6/Mod6Discussion1answerkey.cpp"
        "Module 7/Mod7Discussion1Zimmer.cpp"
        "Module 8/Ch10Exercise21.cpp"
        "Module 8/Mod8Discussion1.cpp"
        "Module 8/Mod8Discussion1answerkey.cpp")
